tests/suite/fail/generated/borrow/fail_move_store_input.ny
fn store(x: string) -> void { print(x) }
fn main() {
    let input = "hello"
    store(input)
    print(input) //~ ERROR was moved
}
